--- a/index.html
+++ b/index.html
@@ -120,37 +120,50 @@
         а из-за совокупности нескольких факторов. Вот что может помочь:
       </p>
       <ul class="cards-list">
-        <article class="card card_theme_dark">
-          <div class="card__author">
-            <img
-                    class="card__author-photo"
-                    src="./images/polyarinov.png"
-                    alt="Алексей Поляринов"
-            />
-            <p class="card__author-name">Алексей Поляринов</p>
-          </div>
-          <div class="card__content">
-            <h4 class="card__title">Начать любыми словами</h4>
-            <div class="card__text">
-              <p>
-                Любыми — без шуток. Если не верите нам, посмотрите,
-                например, чем открывается эссе Алексея Поляринова «Чарли
-                Кауфман: расширение пространства». Можно и менее радикально.
-                Главное, чтобы пустую страницу начали заполнять символы.
-                Получится своеобразная ловушка для мозга: он видит, что вы уже
-                начали что-то делать, и ему становится легче войти в
-                состояние потока.
-              </p>
+        <li>
+          <article class="card card_theme_dark">
+            <div class="card__author">
+              <img
+                      class="card__author-photo"
+                      src="./images/polyarinov.png"
+                      alt="Алексей Поляринов"
+              />
+              <p class="card__author-name">Алексей Поляринов</p>
             </div>
-          </div>
-        </article>
-        <article class="card card_theme_bright">
-          <div class="card__content">
-            <h4 class="card__title">
+            <div class="card__content">
+              <h4 class="card__title">Начать любыми словами</h4>
+              <div class="card__text">
+                <p>
+                  Любыми — без шуток. Если не верите нам, посмотрите,
+                  например, чем открывается эссе Алексея Поляринова «Чарли
+                  Кауфман: расширение пространства». Можно и менее радикально.
+                  Главное, чтобы пустую страницу начали заполнять символы.
+                  Получится своеобразная ловушка для мозга: он видит, что вы уже
+                  начали что-то делать, и ему становится легче войти в
+                  состояние потока.
+                </p>
+              </div>
+            </div>
+          </article>
 
-            </h4>
-          </div>
-        </article>
+          <article class="card card_theme_bright">
+            <div class="card__content">
+              <h4 class="card__title">
+                Поставить перед собой рамку для фотографии
+              </h4>
+              <div class="card__text">
+                <p>
+                  Самую обычную: 10 на 15 сантиметров. Уже от одного ощущения,
+                  что предстоит работа над большой и сложной задачей, может
+                  пропасть всякое желание за неё браться. В такие моменты
+                  хорошо помогает загнать задачу в рамки — в прямом смысле.
+                  Сосредоточьтесь на том, чтобы заполнить только пространство
+                  10х15 сантиметров. Что дальше — пока неважно.
+                </p>
+              </div>
+            </div>
+          </article>
+        </li>
       </ul>
   </body>
   <header class="content-section content-section_theme_dark"></header>
@@ -177,6 +190,16 @@
         class="how-to content-section content-section_theme_dark"
         ></section>
     </main>
-    <footer class="footer content-section content-section_theme_dark"></footer>
+    <footer class="footer content-section content-section_theme_dark">
+      <p class="footer__copy">© VЁRSTKA</p>
+      <ul class="footer__links">
+        <li>
+          <a href="#">ВК</a>
+        </li>
+        <li>
+          <a href="#">Ютуб</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
