--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <header class="header content-section content-section_theme_dark"></header>
     <main class="content">
       <section
-        class="cover content-section content-section_theme_dark"
+        class="content-section content-section_theme_dark"
        ></section>
       <section
         class="intro content-section content-section_theme_dark"
