--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
               </div>
             </div>
           </article>
-
           <article class="card card_theme_bright">
             <div class="card__content">
               <h4 class="card__title">
@@ -163,6 +162,32 @@
               </div>
             </div>
           </article>
+          <article class="card card_theme_dark">
+            <div class="card__author">
+              <img
+                      class="card__author-photo"
+                      src="./images/bunin.png.png"
+                      alt="Иван Бунин"
+              />
+              <p class="card__author-name">Иван Бунин</p>
+            </div>
+            <div class="card__content">
+              <h4 class="card__title">Сделать из задачи рутину</h4>
+              <div class="card__text">
+                <p>
+                  «Писать стихи нужно каждый день, подобно тому как скрипач или
+                  пианист непременно должен каждый день без пропусков по нескольку
+                  часов играть на своём инструменте. В противном случае ваш талант
+                  неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое
+                  время не берут воду. А о чём писать? О чём угодно. Если у вас в
+                  данное время нет никакой темы, идеи, то пишите просто обо всём,
+                  что увидите», — такой совет своему приятелю дал Иван Бунин. Нет
+                  повода ему не следовать.
+                </p>
+              </div>
+            </div>
+          </article>
+
         </li>
       </ul>
   </body>
