--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="card__author">
               <img
                       class="card__author-photo"
-                      src="./images/bunin.png.png"
+                      src="./images/bunin.png"
                       alt="Иван Бунин"
               />
               <p class="card__author-name">Иван Бунин</p>
@@ -187,33 +187,9 @@
               </div>
             </div>
           </article>
-
         </li>
       </ul>
-  </body>
-  <header class="content-section content-section_theme_dark"></header>
-  <main>
-    <section class="content-section content-section_theme_dark"></section>
-    <section class="content-section content-section_theme_dark"></section>
-    <section class="content-section content-section_theme_bright"></section>
-    <section class="content-section content-section_theme_dark"></section>
-  </main>
-  <footer class="content-section content-section_theme_dark"></footer>
-  <body>
-    <header class="header content-section content-section_theme_dark"></header>
-    <main class="content">
-      <section
-        class="content-section content-section_theme_dark"
-       ></section>
-      <section
-        class="intro content-section content-section_theme_dark"
-        ></section>
-      <section
-        class="reapsons content-section content-section_theme_bright"
-        ></section>
-      <section
-        class="how-to content-section content-section_theme_dark"
-        ></section>
+    </section>
     </main>
     <footer class="footer content-section content-section_theme_dark">
       <p class="footer__copy">© VЁRSTKA</p>
